Add country dialing codes

--- a/tests/Kapa.Culture.Tests/Kapa.Culture.Tests.csproj
+++ b/tests/Kapa.Culture.Tests/Kapa.Culture.Tests.csproj
@@ -21,6 +21,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\Kapa.Culture\Kapa.Culture\Kapa.Culture.csproj" />
+      <ProjectReference Include="..\..\src\Kapa.Culture.Core\Kapa.Culture.Core.csproj" />
+      <ProjectReference Include="..\..\src\Kapa.Culture\Kapa.Culture.csproj" />
     </ItemGroup>
 
 </Project>
