--- a/tests/Kapa.Country.Tests/Kapa.Country.Tests.csproj
+++ b/tests/Kapa.Country.Tests/Kapa.Country.Tests.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <RootNamespace>Kapa.Culture.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Kapa.Culture.Core\Kapa.Culture.Core.csproj" />
+      <ProjectReference Include="..\..\src\Kapa.Country.Core\Kapa.Country.Core.csproj" />
     </ItemGroup>
 
 </Project>
